style.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap');

body{
    width: 100%;
    margin: 0;
    font-size: 10px;
    display: flex;
    justify-content: center;
    user-select: none;
    font-family: Raleway 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    
}
.title{
    margin-top: 2rem;
    margin-bottom: 1rem;
    font-size: 1.4rem;
    color: #4166B2;
}
.big-title{
    cursor: pointer;
    font-size: 1.5rem;
    margin-top: 2rem;
    /* margin-bottom: 1rem; */
}
.header{
  align-self: center;
  text-align: center;
  /* max-width: 30rem; */
  font-size: 1.3rem;
  display: flex;
  align-items: center;
  flex-direction: column;
  width: 100%;

}
.header-background{
  width: 100%;
  height: 10rem;
  background-color: #1B2946;
  /* position: relative; */
}
.header__text{
  box-sizing: border-box;
  margin-top: 5rem;
  color: #fff;
  background-color: #cfcfcf;
  font-size: 1.2rem;
  max-width: 30rem;
  width: 80vw;
  border-radius: 8px;
  padding:  0.6rem 0.9rem 0.6rem 0.6rem;
}
.img{
  background-color: #fff;
  border-top-left-radius:  7px;
  border-top-right-radius:  7px;
  padding: 10px;
  position: relative;
  top: 6.2rem;
}
.wrapper{
    display: flex;
    justify-content: center;
    max-width: 50rem;
    width: 80vw;
    flex-direction: column;
    
    /* border: #555 solid 1px; */
    /* border-radius: 15px; */
    
    /* box-shadow: rgb(15, 15, 15); */
}

.checkbox{
    margin-right: 0.5rem;
    /* display: inline-block; */
    justify-self: center;
    align-self: flex-start;
    box-shadow: 3px 3px 5px 1px #555;
}
.main{
    border-radius: 1rem;
    margin-top: 3rem;
    padding: 1rem;
    /* background-color: rgb(235, 235, 235); */
    background: rgba(55, 83, 139, 0.25);
}
.report{
    display: flex;
    flex-direction: row;
    margin: 1rem 0 0 0;
    color: #1B2946;

}
.fieldset{
  display: flex;
  flex-direction: column;
  border-radius: 5px;
  font-size: 1rem;
  border: none;
  padding: 0.6rem 0 1rem 0;
}
.report_item{
    font-size: 1.1rem;
}
.input-wrapper{
    /* padding-top: 0.65rem; */
}
p{
    font-size: 1rem;
    /* display: none; */
}
/* .report1:hover{
    color: brown;

} */

 /* .wrapper{
    width: 50vw;
    display: flex;
    flex-direction: column;
    align-items: center;
  } */
  .report-name {
    cursor: pointer;
    text-align: start;
    width: 100%;
    position: relative;
    display: block;
    flex-direction: row;
    
  }
  
  .description {
    visibility: hidden;
    width: 20rem;
    background-color: #555;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 2px;
    position: absolute;
    z-index: 3;
    top: 125%;
    left: 30%;
    margin-left: -60px;
    opacity: 0;
    transition: opacity 0.5s;
  }
/*  
  .report .description::after {
    content: "";
    position: absolute;
    bottom: 100%;
    left: 35%;
    margin-left: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: transparent transparent #555 transparent;
  }
*/  
.report-name:hover .description {
    visibility: visible;
    opacity: 1;
}
.show-description{
    visibility: visible;
    opacity: 1;
}
.report__icon{
  margin-left: 0.5rem;
  /* font-size: 5px; */
  height: 1rem;
  /* width: 1rem;
  font-size: 1rem;
  border: #555 solid 1px;
  border-radius: 50%;
  display: inline-block;
  text-align: center;
  margin: 0 0 0 0; */

}
.overlay{
    position: fixed;
    display:flex;
    width:100%;
    height:100%;
    justify-content:center;
    align-items:center;
    background: black;
    opacity: 0.4;
    z-index: 1;
}
.g-form__input-wrapper_hidden{
    display: none;
}
.textarea{
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
}
.text{
    margin-top: 0.2rem;
    width: 18rem;
    
}
.section{
    display: none;
}
 
.g-form__preloader 
{ 
	height: 2px;
	width: 100%;
	position: relative;
	margin: 15px 0;
	opacity: 1;
}
.g-form__preloader:before {
	background: mediumturquoise;
	content: '';
	display: inline-block;
	position: absolute;
	left: 0;
	width: 50px;
	height: 2px;
	-webkit-animation: smartlidPreloader 3s infinite;
	animation: smartlidPreloader 2s infinite;
}
.g-form__button{
    margin: 2rem 0 1rem 0;
    width: 8rem;
    height: 1.6rem;
    font-family: 'Raleway';
    /* font-style: normal; */
    font-weight: 700;
    /* font-size: 10px;
    line-height: 12px; */
    /* identical to box height */
    background-color: #FFF508;
    border-radius: 4px;
    border: none;
    text-align: center;
    letter-spacing: 0.1em;
    color: #37538B;
    justify-self: center;
    align-self: center;
}
.g-form{
  display: flex;
  flex-direction: column;
}

@media screen and (max-width : 450px) {
    .description{
        width: 15rem;
    }
    .wrapper{
      width: 90vw;
    }
    .body{
      width: 100%;
      box-sizing: border-box;
    }
    .text{
      width:15rem
    }
    .overlay{
      width: 100%;
      box-sizing: border-box;
    }
    .wrapper{
      padding: 0.2rem;
    }
    .img{
      width: 12rem;
      top: 7rem;
    }
    /* .header-background{
      height: ;
    } */
}


@-webkit-keyframes smartlidPreloader {
	0% {
		left: 0; }
		50% {
			left: -webkit-calc(100% - 50px);
			left: calc(100% - 50px); }
			100% {
				left: 0%; } 
			}

			@keyframes smartlidPreloader {
				0% {
					left: 0; }
					50% {
						left: -webkit-calc(100% - 50px);
						left: calc(100% - 50px); }
						100% {
							left: 0%; } 
						}

/* Preloader */

.lds-spinner {
    color: official;
    display: inline-block;
    position: relative;
    width: 80px;
    height: 80px;
    display: none;
  }
  .lds-spinner div {
    transform-origin: 40px 40px;
    animation: lds-spinner 1.2s linear infinite;
  }
  .lds-spinner div:after {
    content: " ";
    display: block;
    position: absolute;
    top: 3px;
    left: 37px;
    width: 6px;
    height: 18px;
    border-radius: 20%;
    background: white
  }
  .lds-spinner div:nth-child(1) {
    transform: rotate(0deg);
    animation-delay: -1.1s;
  }
  .lds-spinner div:nth-child(2) {
    transform: rotate(30deg);
    animation-delay: -1s;
  }
  .lds-spinner div:nth-child(3) {
    transform: rotate(60deg);
    animation-delay: -0.9s;
  }
  .lds-spinner div:nth-child(4) {
    transform: rotate(90deg);
    animation-delay: -0.8s;
  }
  .lds-spinner div:nth-child(5) {
    transform: rotate(120deg);
    animation-delay: -0.7s;
  }
  .lds-spinner div:nth-child(6) {
    transform: rotate(150deg);
    animation-delay: -0.6s;
  }
  .lds-spinner div:nth-child(7) {
    transform: rotate(180deg);
    animation-delay: -0.5s;
  }
  .lds-spinner div:nth-child(8) {
    transform: rotate(210deg);
    animation-delay: -0.4s;
  }
  .lds-spinner div:nth-child(9) {
    transform: rotate(240deg);
    animation-delay: -0.3s;
  }
  .lds-spinner div:nth-child(10) {
    transform: rotate(270deg);
    animation-delay: -0.2s;
  }
  .lds-spinner div:nth-child(11) {
    transform: rotate(300deg);
    animation-delay: -0.1s;
  }
  .lds-spinner div:nth-child(12) {
    transform: rotate(330deg);
    animation-delay: 0s;
  }
  @keyframes lds-spinner {
    0% {
      opacity: 1;
    }
    100% {
      opacity: 0;
    }
  }
  

